# AdventOfCode

./: .gitignore  .lvimrc  Cargo.toml  LICENSE  Makefile  README.md  cargo-semiquiet.sh  flake.nix  katex.html
.config/: nextest.toml
.github/: renovate.json5
.github/workflows/: build.yaml  pages.yaml  pages.yml
aoc/: Cargo.toml
aoc/benches/: libs.rs  main.rs
aoc/src/: bins.rs  controller.rs  lib.rs  parser.rs  point.rs  prelude.rs
aoc/src/ext/: abs_diff.rs  chain_sort.rs  factorize.rs  partition_point.rs
aoc_derive/: Cargo.toml
aoc_derive/src/: examples.rs  lib.rs  scanner.rs
aoc_runner/: Cargo.toml
aoc_runner/src/: derived.rs  lib.rs  multi.rs  runner.rs  single.rs
aoc_runner/src/visual/: mod.rs
aoc_runner_derive/: Cargo.toml
aoc_runner_derive/docs/: derive_to_renderable.md  example_input.md  inject_binaries.md  inject_binary.md  register.md  register_crate.md  visual.md
aoc_runner_derive/src/: examples.rs  lib.rs  scanner.rs  visual.rs
aoc_wasm/: Cargo.toml
aoc_wasm/src/: lib.rs
benches/: libs.rs
puzzle_lib/: Cargo.toml
puzzle_lib/benches/: factorize.rs  grid.rs  libs.rs
puzzle_lib/src/: asserts.rs  lib.rs  macros.rs  matrix.rs  parser.md  parser.rs  point.rs  prelude.rs
puzzle_lib/src/ext/: count_occurences.rs  counter.rs  dedent.rs  factorize.rs  midpoint.rs  mod.rs  partition_point.rs  wrap.rs
puzzle_lib/src/ext/primes/: mod.rs
puzzle_lib/src/grid/: full.rs  internal.rs  mod.rs  sparse_map.rs  sparse_set.rs  traits.rs  wrapping.rs
puzzle_lib/src/point/: direction.rs  mod.rs  point.rs  range.rs
puzzle_runner/: Cargo.toml
puzzle_runner/derive/: Cargo.toml
puzzle_runner/derive/src/: example_input.rs  include_chapters.rs  lib.rs  register_chapter.rs  register_controller.rs  register_part.rs  register_series.rs  setup_controller.rs  setup_main.rs  utils.rs
puzzle_runner/src/: bench.rs  controller.rs  derived.rs  lib.rs  multi.rs  runner.rs  single.rs  source.rs
puzzle_runner/src/__internal/: bench.rs  controller.rs  mod.rs  multi.rs  single.rs
puzzle_runner/src/__internal/controller/: bincontroller.rs  cli.rs  mod.rs
puzzle_runner/src/http/: bin.rs  ehttp.rs  mod.rs
puzzle_runner/src/visual/: mod.rs
puzzle_runner_derive/: Cargo.toml
puzzle_runner_derive/docs/: derive_to_renderable.md  example_input.md  register.md  register_crate.md
puzzle_runner_derive/src/: chapters.rs  examples.rs  include_chapters.rs  lib.rs  register_chapter.rs  register_series.rs  scanner.rs  series.rs  setup_main.rs  utils.rs  visual.rs
puzzle_wasm/: Cargo.toml
puzzle_wasm/src/: extern.rs  lib.rs
puzzle_web/frontend/: .eslintrc.cjs  dprint.json  package-lock.json  tsconfig.json  webpack.config.js
puzzle_web/frontend/public/: index.html
puzzle_web/frontend/src/: CalendarView.tsx  ChapterView.tsx  Overview.tsx  index.tsx
puzzle_web/wasm/: Cargo.toml
puzzle_web/wasm/src/: extern.rs  lib.rs
src/: derived.rs  lib.rs  matrix.rs  point.rs  prelude.rs
src/cli/: bench.rs  mod.rs  multi.rs  single.rs  source.rs
src/ext/: count_occurences.rs  factorize.rs  iter.rs  mod.rs
src/ext/num/: mod.rs  primes.rs
src/ext/primes/: mod.rs  precomputed.rs
src/utils/: matrix.rs  mod.rs  parser.rs  point.rs
src/utils/ext/: mod.rs  range.rs
src/utils/ext/num/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: .eslintrc.cjs  package-lock.json  package.json  webpack.config.js
web/public/: index.html
web/src/: Bin.tsx  BinCalendar.tsx  BinDetails.tsx  ChapterView.tsx  Overview.tsx  Result.tsx  Root.tsx  SeriesVies.tsx  context.ts  index.tsx  worker-wrapper.ts  worker.ts
