[package]
name = "aoc"
version.workspace = true
edition.workspace = true

[features]
default = []
bench = [
	"puzzle_runner/bench",
]

[dependencies]
# main
puzzle_runner = { path = "../puzzle_runner" }
puzzle_lib = { path = "../puzzle_lib" }
common_macros = "=0.1.1"
derive-new = "=0.7.0"
paste = "=1.0.15"
num = "=0.4.3"
memoize = { git = "https://github.com/MaienM/memoize", version = "0.4.2" }
itertools = "=0.14.0"
md-5 = "=0.10.6"

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true

[[bench]]
name = "main"
harness = false
required-features = ["bench"]
