[package]
name = "aoc"
version.workspace = true
edition.workspace = true

[features]
default = []
bench = [
	"puzzle_runner/bench",
]

[dependencies]
puzzle_runner = { path = "../puzzle_runner" }
puzzle_lib = { path = "../puzzle_lib" }
common_macros = "=0.1.1"
derive-new.workspace = true
paste.workspace = true
num.workspace = true
memoize = { git = "https://github.com/MaienM/memoize", version = "0.4.2" }
itertools.workspace = true
md-5 = "=0.10.6"

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true

[[bench]]
name = "main"
harness = false
required-features = ["bench"]
