[package]
name = "aoc"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable benchmarking.
bench = [
	"puzzle_runner/bench",
]

[dependencies]
puzzle_runner = { path = "../puzzle_runner" }
puzzle_lib = { path = "../puzzle_lib" }
common_macros = "=0.1.1"
derive-new.workspace = true
paste.workspace = true
num.workspace = true
memoize = { git = "https://github.com/MaienM/memoize", version = "0.4.2" }
itertools.workspace = true
md-5 = "=0.10.6"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "system-proxy", "blocking", "cookies", "rustls-tls-native-roots"] }
regex.workspace = true

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true

[[bin]]
name = "bench"
harness = false
required-features = ["bench"]
