[package]
name = "puzzle_lib"
version.workspace = true
edition.workspace = true

[features]
default = []
bench = [
	"dep:criterion",
]

[dependencies]
# for bench
criterion = { version = "=0.8.0", optional = true }

# main
derive-new = "=0.7.0"
paste = "=1.0.15"
rayon = "=1.11.0"
tap = "=1.0.1"
num = "=0.4.3"
regex = "=1.12.2"
itertools = "=0.14.0"
inherit-methods-macro = "=0.1.0"

[dev-dependencies]
common_macros = "=0.1.1"
pretty_assertions = "=1.4.1"

[lints]
workspace = true

[[bench]]
name = "libs"
harness = false
required-features = ["bench"]
