[package]
name = "puzzle_lib"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable benchmarking.
bench = [
	"dep:criterion",
]

[dependencies]
derive-new.workspace = true
paste.workspace = true
rayon.workspace = true
tap = "=1.0.1"
num.workspace = true
regex.workspace = true
itertools.workspace = true
inherit-methods-macro = "=0.1.0"

# for bench
criterion = { workspace = true, optional = true }

[dev-dependencies]
common_macros = "=0.1.1"
pretty_assertions = "=1.4.1"

[lints]
workspace = true

[[bench]]
name = "libs"
harness = false
required-features = ["bench"]
