[package]
name = "puzzle_runner"
version.workspace = true
edition.workspace = true

[features]
default = []
bench = [
	"dep:criterion",
	"dep:pprof",
]

[dependencies]
# for bench
criterion = { version = "=0.8.0", optional = true }
pprof = { version = "=0.15.0", optional = true, features = ["criterion", "protobuf-codec"] }

ansi_term = "=0.12.1"
puzzle_runner_derive = { path = "../puzzle_runner_derive" }
clap = { version = "=4.5.53", features = ["derive", "string"] }
rayon = "=1.11.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tikv-jemallocator = "=0.6.1"

[lints]
workspace = true
