[package]
name = "puzzle_runner"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable multi-run entrypoint.
multi = [
	"inline-chapters",
]
# Enable benchmarking.
bench = [
	"multi",
	"dep:criterion",
	"dep:pprof",
]
# Enable elements needed to support puzzle_wasm.
wasm = [
	"inline-chapters",
	"dep:serde",
	"dep:tsify",
	"dep:wasm-bindgen",
]
# See feature with this name in puzzle_runner_derive.
inline-chapters = [
	"puzzle_runner_derive/inline-chapters",
]

[dependencies]
ansi_term = "=0.12.1"
puzzle_runner_derive = { path = "../puzzle_runner_derive" }
clap = { version = "=4.5.53", features = ["derive", "string"] }
rayon.workspace = true

# for bench
criterion = { workspace = true, optional = true }
pprof = { version = "=0.15.0", optional = true, features = ["criterion", "protobuf-codec"] }

# for wasm
serde = { workspace = true, optional = true }
tsify = { version = "0.5.6", optional = true, features = ["js"] }
wasm-bindgen = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tikv-jemallocator = "=0.6.1"

[lints]
workspace = true
