[package]
name = "puzzle_runner_derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "=1.0.103"
quote = "=1.0.42"
regex.workspace = true
syn = { version = "=2.0.111", features = ["full", "extra-traits", "visit"] }

[lints]
workspace = true
