[package]
name = "puzzle_wasm"
version = "0.0.0"
edition = "2024"

[features]
debug = []

[dependencies]
aoc = { path = "../aoc", default-features = false }
puzzle_runner = { path = "../puzzle_runner" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["Performance"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-rayon = "1.3.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
